Move ads styling to CSS file, fix spacing
Ads were too close to site contents. Now with 2em margin.

--- a/surf/site-sub.css
+++ b/surf/site-sub.css
@@ -51,3 +51,8 @@ td.noborder img
 	{
 	border		: none
 	}
+.googleadfaixa
+	{
+	text-align	:center;
+	margin 		:2em auto;
+	}
